# skill-habit

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: session-start.json  user-prompt-submit.json
READMEs/: README.de.md  README.en.md  README.fr.md  README.ja.md  README.ko.md  README.ru.md  README.zh-CN.md  README.zh-TW.md
adapters/: base.py
adapters/claude_code/: record.py  skill_generator.py
adapters/claude_code/hooks/: session-start.sh  user-prompt-submit.sh
adapters/opencode/: README.md
core/: analyzer.py  cache.py  config.py  tracker.py
scripts/: bootstrap.sh  build_cache.py  dev-sync.sh  install.sh  uninstall.sh  upgrade.sh
skill_habit/: cli.py
skills/quick/: SKILL.md  run.sh
skills/rebuild/: SKILL.md  run.sh
skills/server/: SKILL.md  run.sh
skills/uninstall/: SKILL.md  run.py  run.sh
skills/version/: SKILL.md  run.sh
ui/: index.html  server.py
ui/locales/: de.js  en.js  fr.js  ja.js  ko.js  ru.js  zh.js
