[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skill-habit"
version = "0.0.1"
description = "Your AI coding habits, revealed — frequency-ranked skill shortcuts with analytics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "kiss4u", url = "https://github.com/kiss4u" }]
keywords = ["claude-code", "slash-commands", "shortcuts", "skill-tracking", "productivity", "ai", "habits", "analytics", "heatmap", "frequency-ranking", "sequence-prediction", "developer-tools"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/kiss4u/skill-habit"
Repository = "https://github.com/kiss4u/skill-habit"
Issues = "https://github.com/kiss4u/skill-habit/issues"

[project.scripts]
skill-habit = "skill_habit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skill_habit*", "core*", "adapters*"]

[tool.setuptools.package-data]
"*" = ["*.sh", "*.html", "*.json", "*.md", "*.svg", "*.png"]
